・reactの実行方法を追加 ・preactでテーブルのクリック判定が発生しなかった不具合対応

--- a/src/components/equipTable.scss
+++ b/src/components/equipTable.scss
@@ -41,7 +41,9 @@ section.equipTableSection {
     }
     table.equipTable {
       border-collapse: collapse;
-
+td>* {
+  pointer-events: none;
+}
       thead {
         background: #212121f2;
         th {
@@ -104,6 +106,9 @@ section.equipTableSection {
           td.number {
             text-align: right;
           }
+          td>* {
+            pointer-events: none;
+          }
         }
       }
 
@@ -143,3 +148,5 @@ section.equipTableSection {
     }
   }
 }
+
+
